--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
 		"eslint"
 	],
 	"scripts": {
-		"dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-upload\" \"npm:dev-nodemon\"",
-		"client-dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
-		"upload-dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-upload\" \"npm:dev-nodemon\"",
-		"server-dev": "clear && npm run delete-build && npm run build-server && npm run build-watch && npx concurrently \"npm:dev-watch\" \"npm:dev-server\" \"npm:dev-nodemon\"",
+		"dev": "clear && npm run delete-build && npm run build-server && npm run build-copy && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-upload\" \"npm:dev-nodemon\"",
+		"client-dev": "clear && npm run delete-build && npm run build-server && npm run build-copy && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
+		"upload-dev": "clear && npm run delete-build && npm run build-server && npm run build-copy && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-upload\" \"npm:dev-nodemon\"",
+		"server-dev": "clear && npm run delete-build && npm run build-server && npm run build-copy && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\"",
 		"dev-nodemon": "npx kill-port 3000 && npx nodemon -r dotenv/config dist",
 		"dev-server": "npx tsc --project tsconfig.server.json --watch",
-		"dev-watch": "npx babel src/server --out-dir dist --copy-files --watch",
+		"dev-copy": "npx babel src/server --out-dir dist --copy-files --watch",
 		"dev-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --config webpack.client.ts",
 		"dev-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --config webpack.upload.ts",
 		"build-host": "clear && npm run build && clear && npm run host",
 		"host": "node -r dotenv/config dist",
-		"build": "npm run delete-build && npm run build-server && npm run build-watch && npm run build-client",
-		"build-watch": "npx babel src/server --out-dir dist --copy-files",
+		"build": "npm run delete-build && npm run build-server && npm run build-copy && npm run build-client",
+		"build-copy": "npx babel src/server --out-dir dist --copy-files",
 		"build-server": "npx tsc --project tsconfig.server.json",
 		"build-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.client.ts",
 		"build-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.upload.ts",
@@ -155,6 +155,7 @@
 		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.0",
 		"ts-loader": "^8.0.4",
+		"ts-node": "^9.0.0",
 		"typescript": "^4.0.3",
 		"webpack": "^4.44.2",
 		"webpack-bundle-analyzer": "^3.9.0",
