--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,19 @@
 {
 	"compilerOptions": {
 		"jsx": "react",
-		"strict": true,
 		"outDir": "dist",
-		"target": "ES2019",
+		"target": "ESNEXT",
 		"sourceMap": false,
+		"alwaysStrict": true,
 		"noImplicitAny": true,
+		"noImplicitThis": true,
 		"removeComments": true,
 		"esModuleInterop": true,
 		"strictNullChecks": true,
 		"noImplicitReturns": true,
 		"moduleResolution": "Node",
 		"noUnusedParameters": false,
+		"strictBindCallApply": true,
 		"strictFunctionTypes": true,
 		"jsxFactory": "createElement",
 		"noFallthroughCasesInSwitch": true,
