--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
 		"eslint"
 	],
 	"scripts": {
-		"dev": "clear && npm run delete-build && npm run build-server && npm run build-copy && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-upload\" \"npm:dev-nodemon\"",
-		"client-dev": "clear && npm run delete-build && npm run build-server && npm run build-copy && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-client\" \"npm:dev-nodemon\"",
-		"upload-dev": "clear && npm run delete-build && npm run build-server && npm run build-copy && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-upload\" \"npm:dev-nodemon\"",
-		"server-dev": "clear && npm run delete-build && npm run build-server && npm run build-copy && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\"",
+		"dev": "clear && npm run delete-build && npm run build-server && npm run build-copy && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\" \"npm:dev-client\" \"npm:dev-upload\"",
+		"client-dev": "npm run delete-build && npm run build-server && npm run build-copy && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\" \"npm:dev-client\"",
+		"upload-dev": "npm run delete-build && npm run build-server && npm run build-copy && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\" \"npm:dev-upload\" ",
+		"server-dev": "npm run delete-build && npm run build-server && npm run build-copy && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\"",
 		"dev-nodemon": "npx kill-port 3000 && npx nodemon -r dotenv/config dist",
 		"dev-server": "npx tsc --project tsconfig.server.json --watch",
-		"dev-copy": "npx babel src/server --out-dir dist --copy-files --watch",
+		"dev-copy": "npx babel src/server -d dist -D --quiet -w",
 		"dev-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --config webpack.client.ts",
 		"dev-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --config webpack.upload.ts",
 		"build-host": "clear && npm run build && clear && npm run host",
 		"host": "node -r dotenv/config dist",
 		"build": "npm run delete-build && npm run build-server && npm run build-copy && npm run build-client",
-		"build-copy": "npx babel src/server --out-dir dist --copy-files",
+		"build-copy": "npx babel src/server -d dist -D --quiet",
 		"build-server": "npx tsc --project tsconfig.server.json",
 		"build-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.client.ts",
 		"build-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.upload.ts",
@@ -92,6 +92,7 @@
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.11.6",
+		"@babel/core": "^7.11.6",
 		"@playlyfe/gql": "^2.6.2",
 		"@types/apollo-upload-client": "^14.1.0",
 		"@types/body-parser": "^1.19.0",
@@ -104,6 +105,7 @@
 		"@types/dotenv-webpack": "^3.0.0",
 		"@types/eslint": "^7.2.3",
 		"@types/express": "^4.17.8",
+		"@types/express-serve-static-core": "^4.17.13",
 		"@types/graphql-upload": "^8.0.4",
 		"@types/helmet": "0.0.48",
 		"@types/lodash": "^4.14.161",
@@ -128,7 +130,7 @@
 		"@typescript-eslint/parser": "^4.3.0",
 		"compression-webpack-plugin": "^6.0.2",
 		"concurrently": "^5.3.0",
-		"copy-webpack-plugin": "^6.1.1",
+		"copy-webpack-plugin": "^6.2.0",
 		"cross-env": "^7.0.2",
 		"css-loader": "^4.3.0",
 		"dotenv": "^8.2.0",
@@ -139,16 +141,17 @@
 		"eslint-plugin-jsx-a11y": "^6.3.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.21.2",
+		"eslint-plugin-react": "^7.21.3",
 		"eslint-plugin-react-hooks": "^4.1.2",
 		"graphql": "^15.3.0",
 		"html-webpack-plugin": "^4.5.0",
 		"kill-port": "^1.6.1",
-		"mini-css-extract-plugin": "^0.11.2",
+		"mini-css-extract-plugin": "^0.11.3",
 		"nodemon": "^2.0.4",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
 		"sass": "^1.26.11",
 		"sass-loader": "^10.0.2",
+		"source-map-loader": "^1.1.0",
 		"style-loader": "^1.2.1",
 		"stylelint": "^13.7.2",
 		"stylelint-config-sass-guidelines": "^7.1.0",
