--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -128,6 +128,19 @@
 				"ignoreCase": false
 			}
 		],
+		"@typescript-eslint/comma-dangle": [
+			"error",
+			{
+				"generics": "ignore",
+				"enums": "only-multiline",
+				"tuples": "only-multiline",
+				"arrays": "only-multiline",
+				"objects": "only-multiline",
+				"imports": "only-multiline",
+				"exports": "only-multiline",
+				"functions": "only-multiline"
+			}
+		],
 		"@typescript-eslint/naming-convention": [
 			"error",
 			{
