--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
 		"pg": "^8.3.3",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-full-screen": "^0.3.1",
 		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-waypoint": "^9.0.3",
