--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,8 @@
 NODE_ENV="development"
 # NODE_ENV="production"
 
+TZ="Australia/Sydney"
+
 HOST="localhost"
 
 SERVER_PORT=80
@@ -8,32 +10,21 @@ DEV_SERVER_PORT=3000
 DEV_CLIENT_PORT=3001
 DEV_UPLOAD_PORT=3002
 
-APP="music-app"
-APP_NAME="Music App"
-
-PAGINATION_NUM=40
-TZ = "Australia/Sydney"
-
-USER_ID=""
-
-AWS_RDS_DB=""
-AWS_RDS_PORT=""
-AWS_RDS_USER=""
+AWS_RDS_DB="index"
+AWS_RDS_PORT="5432"
+AWS_RDS_USER="postgres"
 AWS_RDS_PASSWORD=""
-AWS_RDS_ENDPOINT=""
+AWS_RDS_ENDPOINT="music-app.cgha4joar7xm.ap-southeast-2.rds.amazonaws.com"
 
-AWS_S3_ACL=""
-AWS_S3_BUCKET=""
-AWS_S3_REGION=""
-
+AWS_REGION="ap-southeast-2"
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 
-APOLLO_SCHEMA_REPORTING=true
-APOLLO_GRAPH_VARIANT="current"
-APOLLO_KEY=""
+# APOLLO_SCHEMA_REPORTING=true
+# APOLLO_GRAPH_VARIANT="current"
+# APOLLO_KEY=""
 
 SERP_API_KEY=""
 
-ALGOLIA_APPLICATION_ID=""
-ALGOLIA_API_KEY=""
+# ALGOLIA_APPLICATION_ID=""
+# ALGOLIA_API_KEY=""
