--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"client-dev": "npm run dev-init && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\" \"npm:dev-client\"",
 		"upload-dev": "npm run dev-init && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\" \"npm:dev-upload\"",
 		"server-dev": "npm run dev-init && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\"",
-		"dev-init": "clear && npm run delete-build && npm run kill-port && npm run build-server && npm run build-copy",
+		"dev-init": "clear && npm run kill-port && npm run delete-build && npm run build-server && npm run build-copy",
 		"dev-nodemon": "npx nodemon -r dotenv/config dist",
 		"dev-server": "npx tsc --project tsconfig.server.json --watch",
 		"dev-copy": "npx babel src/server -d dist -D --quiet -w",
@@ -50,7 +50,7 @@
 		"build-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.client.ts",
 		"build-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.upload.ts",
 		"delete-build": "rm -r -f dist",
-		"kill-port": "npx kill-port 3000",
+		"kill-port": "npx kill-port 3000 3001 3002",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master",
 		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
@@ -102,7 +102,6 @@
 		"@types/compression-webpack-plugin": "^4.0.1",
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
-		"@types/copy-webpack-plugin": "^6.0.0",
 		"@types/cors": "^2.8.7",
 		"@types/dotenv-webpack": "^3.0.0",
 		"@types/eslint": "^7.2.3",
@@ -132,7 +131,6 @@
 		"@typescript-eslint/parser": "^4.3.0",
 		"compression-webpack-plugin": "^6.0.2",
 		"concurrently": "^5.3.0",
-		"copy-webpack-plugin": "^6.2.0",
 		"cross-env": "^7.0.2",
 		"css-loader": "^4.3.0",
 		"dotenv": "^8.2.0",
@@ -148,7 +146,7 @@
 		"graphql": "^15.3.0",
 		"html-webpack-plugin": "^4.5.0",
 		"kill-port": "^1.6.1",
-		"mini-css-extract-plugin": "^0.11.3",
+		"mini-css-extract-plugin": "^0.12.0",
 		"nodemon": "^2.0.4",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
 		"sass": "^1.26.12",
@@ -166,7 +164,7 @@
 		"webpack-bundle-analyzer": "^3.9.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0",
-		"webpack-merge": "^5.1.4",
+		"webpack-merge": "^5.2.0",
 		"write-file-webpack-plugin": "^4.5.1"
 	}
 }
