--- a/src/server/public/manifest.json
+++ b/src/server/public/manifest.json
@@ -1,6 +1,10 @@
 {
-	"short_name":"music-upload-app",
-	"name":"music-upload-app",
+	"start_url":"/",
+	"name":"music-app",
+	"display":"fullscreen",
+	"theme_color":"#000000",
+	"short_name":"music-app",
+	"background_color":"#ffffff",
 	"icons":[
 		{
 			"src":"/images/icons/192.png",
@@ -12,9 +16,5 @@
 			"type":"image/png",
 			"sizes":"512x512"
 		}
-	],
-	"start_url":"/",
-	"display":"fullscreen",
-	"theme_color":"#000000",
-	"background_color":"#ffffff"
+	]
 }
