--- a/package.json
+++ b/package.json
@@ -126,7 +126,6 @@
 		"@types/webpack-bundle-analyzer": "^3.8.0",
 		"@types/webpack-dev-server": "^3.11.0",
 		"@types/webpack-env": "^1.15.3",
-		"@types/write-file-webpack-plugin": "^4.5.0",
 		"@typescript-eslint/eslint-plugin": "^4.3.0",
 		"@typescript-eslint/parser": "^4.3.0",
 		"compression-webpack-plugin": "^6.0.2",
@@ -149,7 +148,7 @@
 		"mini-css-extract-plugin": "^0.12.0",
 		"nodemon": "^2.0.4",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
-		"sass": "^1.26.12",
+		"sass": "^1.27.0",
 		"sass-loader": "^10.0.2",
 		"source-map-loader": "^1.1.0",
 		"style-loader": "^1.2.1",
@@ -164,7 +163,6 @@
 		"webpack-bundle-analyzer": "^3.9.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0",
-		"webpack-merge": "^5.2.0",
-		"write-file-webpack-plugin": "^4.5.1"
+		"webpack-merge": "^5.2.0"
 	}
 }
