--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"client-dev": "npm run dev-init && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\" \"npm:dev-client\"",
 		"upload-dev": "npm run dev-init && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\" \"npm:dev-upload\"",
 		"server-dev": "npm run dev-init && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\"",
-		"dev-init": "clear && npm run kill-port && npm run delete-build && npm run build-server && npm run build-copy",
+		"dev-init": "clear && npm run delete-build && npm run build-server && npm run build-copy && npm run kill-port",
 		"dev-nodemon": "npx nodemon -r dotenv/config dist",
 		"dev-server": "npx tsc --project tsconfig.server.json --watch",
 		"dev-copy": "npx babel src/server -d dist -D --quiet -w",
@@ -56,7 +56,7 @@
 		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
-		"@apollo/client": "^3.2.2",
+		"@apollo/client": "^3.2.3",
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
@@ -108,14 +108,14 @@
 		"@types/express-serve-static-core": "^4.17.13",
 		"@types/graphql-upload": "^8.0.4",
 		"@types/helmet": "0.0.48",
-		"@types/lodash": "^4.14.161",
+		"@types/lodash": "^4.14.162",
 		"@types/mini-css-extract-plugin": "^0.9.1",
 		"@types/morgan": "^1.9.1",
 		"@types/node": "^14.11.8",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.5",
-		"@types/react": "^16.9.50",
+		"@types/react": "^16.9.52",
 		"@types/react-dom": "^16.9.8",
 		"@types/react-redux": "^7.1.9",
 		"@types/react-router-dom": "^5.1.6",
