--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"client-dev": "npm run dev-init && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\" \"npm:dev-client\"",
 		"upload-dev": "npm run dev-init && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\" \"npm:dev-upload\"",
 		"server-dev": "npm run dev-init && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-nodemon\"",
-		"dev-init": "clear && npm run delete-build && npm run build-server && npm run build-copy && npm run kill-port",
+		"dev-init": "clear && npm run init && npm run build-server && npm run build-copy",
 		"dev-nodemon": "npx nodemon -r dotenv/config dist",
 		"dev-server": "npx tsc --project tsconfig.server.json --watch",
 		"dev-copy": "npx babel src/server -d dist -D --quiet -w",
@@ -44,11 +44,12 @@
 		"dev-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --config webpack.upload.ts",
 		"build-host": "clear && npm run build && clear && npm run host",
 		"host": "node -r dotenv/config dist",
-		"build": "npm run delete-build && npm run build-server && npm run build-copy && npm run build-client",
+		"build": "npm run init && npm run build-server && npm run build-copy && npm run build-client && npm run build-upload",
 		"build-copy": "npx babel src/server -d dist -D --quiet",
 		"build-server": "npx tsc --project tsconfig.server.json",
 		"build-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.client.ts",
 		"build-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.upload.ts",
+		"init": "clear && npm run kill-port && npm run delete-build",
 		"delete-build": "rm -r -f dist",
 		"kill-port": "npx kill-port 3000 3001 3002",
 		"sync": "git checkout . && git remote update && git pull",
@@ -85,6 +86,7 @@
 		"node-fetch": "^2.6.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-full-screen": "^0.3.1",
 		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
 		"react-waypoint": "^9.0.3",
@@ -125,8 +127,8 @@
 		"@types/webpack-bundle-analyzer": "^3.8.0",
 		"@types/webpack-dev-server": "^3.11.0",
 		"@types/webpack-env": "^1.15.3",
-		"@typescript-eslint/eslint-plugin": "^4.3.0",
-		"@typescript-eslint/parser": "^4.3.0",
+		"@typescript-eslint/eslint-plugin": "^4.4.1",
+		"@typescript-eslint/parser": "^4.4.1",
 		"compression-webpack-plugin": "^6.0.3",
 		"concurrently": "^5.3.0",
 		"cross-env": "^7.0.2",
