--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,8 @@
 	"files.exclude": {
 		".git": true,
 		".env": false,
-		"dist": false,
-		".vscode": false,
+		"dist": true,
+		".vscode": true,
 		"node_modules/": true
 	},
 	"files.associations": {
