--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
 		".git": true,
 		".env": false,
 		"dist": true,
-		".vscode": true,
+		".vscode": false,
+		"access.log": true,
 		"node_modules/": true
 	},
 	"files.associations": {
