--- a/.env.template
+++ b/.env.template
@@ -23,5 +23,5 @@ AWS_SECRET_ACCESS_KEY=""
 
 SERP_API_KEY=""
 
-# ALGOLIA_APPLICATION_ID=""
-# ALGOLIA_API_KEY=""
+ALGOLIA_APPLICATION_ID="C31MUS7L1H"
+ALGOLIA_API_KEY=""
