--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
 		"react-router-dom": "^5.2.0",
 		"react-waypoint": "^9.0.3",
 		"sharp": "^0.26.2",
+		"use-sound": "^1.0.2",
 		"uuid": "^8.3.0"
 	},
 	"devDependencies": {
@@ -136,7 +137,7 @@
 		"dotenv": "^8.2.0",
 		"dotenv-webpack": "^4.0.0",
 		"eslint": "^7.11.0",
-		"eslint-config-airbnb-typescript": "^11.4.0",
+		"eslint-config-airbnb-typescript": "^12.0.0",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-jsx-a11y": "^6.3.1",
 		"eslint-plugin-node": "^11.1.0",
