--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,6 +55,7 @@
 		"jsx-a11y/media-has-caption": "off",
 		"react/no-unused-prop-types": "off",
 		"node/no-unpublished-import": "off",
+		"react-hooks/exhaustive-deps": "off",
 		"react/require-default-props": "off",
 		"lines-between-class-members": "off",
 		"import/prefer-default-export": "off",
