--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
-		"@apollo/client": "^3.2.4",
+		"@apollo/client": "^3.2.5",
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
@@ -69,24 +69,24 @@
 		"algoliasearch": "^4.5.1",
 		"apollo-server-express": "^2.18.1",
 		"apollo-upload-client": "^14.1.2",
-		"aws-sdk": "^2.771.0",
+		"aws-sdk": "^2.775.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"downshift": "^6.0.6",
 		"express": "^4.17.1",
-		"graphql-scalars": "^1.4.0",
+		"graphql-scalars": "^1.4.1",
 		"graphql-upload": "^11.0.0",
 		"helmet": "^4.1.1",
 		"howler": "^2.2.0",
 		"lodash": "^4.17.20",
 		"morgan": "^1.10.0",
-		"music-metadata": "^7.4.0",
-		"music-metadata-browser": "^2.1.4",
+		"music-metadata": "^7.4.1",
+		"music-metadata-browser": "^2.1.5",
 		"node-fetch": "^2.6.1",
-		"react": "^16.14.0",
-		"react-dom": "^16.14.0",
+		"react": "^17.0.0",
+		"react-dom": "^17.0.0",
 		"react-full-screen": "^0.3.1",
 		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
@@ -110,12 +110,12 @@
 		"@types/express": "^4.17.8",
 		"@types/express-serve-static-core": "^4.17.13",
 		"@types/graphql-upload": "^8.0.4",
-		"@types/helmet": "0.0.48",
+		"@types/helmet": "^4.0.0",
 		"@types/howler": "^2.2.1",
 		"@types/lodash": "^4.14.162",
 		"@types/mini-css-extract-plugin": "^1.0.0",
 		"@types/morgan": "^1.9.1",
-		"@types/node": "^14.11.10",
+		"@types/node": "^14.14.0",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.5",
@@ -125,12 +125,12 @@
 		"@types/react-router-dom": "^5.1.6",
 		"@types/sharp": "^0.26.0",
 		"@types/uuid": "^8.3.0",
-		"@types/webpack": "^4.41.22",
-		"@types/webpack-bundle-analyzer": "^3.8.0",
+		"@types/webpack": "^4.41.23",
+		"@types/webpack-bundle-analyzer": "^3.9.0",
 		"@types/webpack-dev-server": "^3.11.0",
 		"@types/webpack-env": "^1.15.3",
-		"@typescript-eslint/eslint-plugin": "^4.4.1",
-		"@typescript-eslint/parser": "^4.4.1",
+		"@typescript-eslint/eslint-plugin": "^4.5.0",
+		"@typescript-eslint/parser": "^4.5.0",
 		"compression-webpack-plugin": "^6.0.3",
 		"concurrently": "^5.3.0",
 		"cross-env": "^7.0.2",
@@ -143,13 +143,13 @@
 		"eslint-plugin-jsx-a11y": "^6.3.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.21.4",
-		"eslint-plugin-react-hooks": "^4.1.2",
+		"eslint-plugin-react": "^7.21.5",
+		"eslint-plugin-react-hooks": "^4.2.0",
 		"graphql": "^15.3.0",
 		"html-webpack-plugin": "^4.5.0",
 		"kill-port": "^1.6.1",
-		"mini-css-extract-plugin": "^1.0.0",
-		"nodemon": "^2.0.5",
+		"mini-css-extract-plugin": "^1.1.1",
+		"nodemon": "^2.0.6",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
 		"pg": "^8.4.1",
 		"sass": "^1.27.0",
@@ -160,7 +160,7 @@
 		"stylelint-config-sass-guidelines": "^7.1.0",
 		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.1",
-		"ts-loader": "^8.0.5",
+		"ts-loader": "^8.0.6",
 		"ts-node": "^9.0.0",
 		"typescript": "^4.0.3",
 		"webpack": "^4.44.2",
