--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
 		"@oly_op/pipe": "^3.1.0",
 		"@reduxjs/toolkit": "^1.4.0",
 		"algoliasearch": "^4.5.1",
-		"apollo-server-express": "^2.18.1",
+		"apollo-server-express": "^2.19.0-alpha.1",
 		"apollo-upload-client": "^14.1.2",
 		"aws-sdk": "^2.779.0",
 		"body-parser": "^1.19.0",
