--- a/.env.template
+++ b/.env.template
@@ -1,14 +1,16 @@
 NODE_ENV="development"
 # NODE_ENV="production"
 
-TZ="Australia/Sydney"
-
 HOST="localhost"
+# HOST="192.168.1.105"
 
-SERVER_PORT=80
+# SERVER_PORT=80
+SERVER_PORT=3000
 DEV_SERVER_PORT=3000
 DEV_CLIENT_PORT=3001
 DEV_UPLOAD_PORT=3002
+
+TZ="Australia/Sydney"
 
 AWS_RDS_PASSWORD=""
 AWS_RDS_ENDPOINT="music-app.cgha4joar7xm.ap-southeast-2.rds.amazonaws.com"
