--- a/.env.template
+++ b/.env.template
@@ -2,10 +2,11 @@ NODE_ENV="development"
 # NODE_ENV="production"
 
 HOST="localhost"
-# HOST="192.168.1.105"
+# HOST=""
 
-# SERVER_PORT=80
 SERVER_PORT=3000
+# SERVER_PORT=80
+
 DEV_SERVER_PORT=3000
 DEV_CLIENT_PORT=3001
 DEV_UPLOAD_PORT=3002
