--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
 		"@oly_op/pipe": "^3.1.0",
 		"@reduxjs/toolkit": "^1.4.0",
 		"algoliasearch": "^4.5.1",
-		"apollo-server-express": "^2.19.0-alpha.1",
+		"apollo-server-express": "^2.19.0",
 		"apollo-upload-client": "^14.1.2",
 		"aws-sdk": "^2.779.0",
 		"body-parser": "^1.19.0",
@@ -107,14 +107,14 @@
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/cors": "^2.8.8",
-		"@types/dotenv-webpack": "^3.0.0",
+		"@types/dotenv-webpack": "^5.0.0",
 		"@types/eslint": "^7.2.4",
 		"@types/express": "^4.17.8",
 		"@types/express-serve-static-core": "^4.17.13",
 		"@types/graphql-upload": "^8.0.4",
 		"@types/helmet": "^4.0.0",
 		"@types/howler": "^2.2.1",
-		"@types/lodash": "^4.14.163",
+		"@types/lodash": "^4.14.164",
 		"@types/mini-css-extract-plugin": "^1.2.0",
 		"@types/morgan": "^1.9.2",
 		"@types/node": "^14.14.6",
@@ -129,7 +129,7 @@
 		"@types/uuid": "^8.3.0",
 		"@types/webpack": "^4.41.24",
 		"@types/webpack-bundle-analyzer": "^3.9.0",
-		"@types/webpack-dev-server": "^3.11.0",
+		"@types/webpack-dev-server": "^3.11.1",
 		"@types/webpack-env": "^1.15.3",
 		"@typescript-eslint/eslint-plugin": "^4.6.0",
 		"@typescript-eslint/parser": "^4.6.0",
@@ -152,7 +152,7 @@
 		"mini-css-extract-plugin": "^1.2.1",
 		"nodemon": "^2.0.6",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
-		"sass": "^1.27.1",
+		"sass": "^1.28.0",
 		"sass-loader": "^10.0.4",
 		"source-map-loader": "^1.1.2",
 		"style-loader": "^2.0.0",
