--- a/package.json
+++ b/package.json
@@ -113,13 +113,13 @@
 		"@types/graphql-upload": "^8.0.4",
 		"@types/helmet": "^4.0.0",
 		"@types/howler": "^2.2.1",
-		"@types/lodash": "^4.14.164",
+		"@types/lodash": "^4.14.165",
 		"@types/mini-css-extract-plugin": "^1.2.1",
 		"@types/morgan": "^1.9.2",
 		"@types/node": "^14.14.6",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
-		"@types/pg": "^7.14.5",
+		"@types/pg": "^7.14.6",
 		"@types/react": "^16.9.55",
 		"@types/react-dom": "^16.9.9",
 		"@types/react-redux": "^7.1.11",
@@ -165,7 +165,7 @@
 		"typescript": "^4.0.5",
 		"webpack": "^4.44.2",
 		"webpack-bundle-analyzer": "^3.9.0",
-		"webpack-cli": "^3.3.12",
+		"webpack-cli": "3.x",
 		"webpack-dev-server": "^3.11.0",
 		"webpack-merge": "^5.3.0"
 	}
