--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
 		".vscode": false,
 		"debug.log": true,
 		"access.log": true,
-		"node_modules/": true
+		"node_modules/": false
 	},
 	"files.associations": {
     "*.env.*": "dotenv"
