--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
 		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
-		"@apollo/client": "^3.2.7",
+		"@apollo/client": "^3.2.9",
 		"@date-io/date-fns": "^1.3.13",
-		"@material-ui/core": "^4.11.0",
+		"@material-ui/core": "^4.11.1",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/pickers": "^3.2.10",
 		"@oly_op/bem": "^2.10.0",
@@ -69,7 +69,7 @@
 		"algoliasearch": "^4.8.0",
 		"apollo-server-express": "^2.19.0",
 		"apollo-upload-client": "^14.1.3",
-		"aws-sdk": "^2.797.0",
+		"aws-sdk": "^2.799.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
@@ -96,8 +96,8 @@
 		"uuid": "^8.3.0"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.12.7",
-		"@babel/core": "^7.12.7",
+		"@babel/cli": "^7.12.8",
+		"@babel/core": "^7.12.9",
 		"@playlyfe/gql": "^2.6.2",
 		"@types/apollo-upload-client": "^14.1.0",
 		"@types/body-parser": "^1.19.0",
@@ -109,7 +109,7 @@
 		"@types/dotenv-webpack": "^5.0.0",
 		"@types/eslint": "^7.2.5",
 		"@types/express": "^4.17.9",
-		"@types/express-serve-static-core": "^4.17.13",
+		"@types/express-serve-static-core": "^4.17.14",
 		"@types/graphql-upload": "^8.0.4",
 		"@types/helmet": "^4.0.0",
 		"@types/howler": "^2.2.1",
@@ -129,9 +129,9 @@
 		"@types/webpack": "^4.41.25",
 		"@types/webpack-bundle-analyzer": "^3.9.0",
 		"@types/webpack-dev-server": "^3.11.1",
-		"@types/webpack-env": "^1.15.3",
-		"@typescript-eslint/eslint-plugin": "^4.7.0",
-		"@typescript-eslint/parser": "^4.7.0",
+		"@types/webpack-env": "^1.16.0",
+		"@typescript-eslint/eslint-plugin": "^4.8.2",
+		"@typescript-eslint/parser": "^4.8.2",
 		"compression-webpack-plugin": "^6.1.1",
 		"concurrently": "^5.3.0",
 		"cross-env": "^7.0.2",
@@ -165,7 +165,7 @@
 		"typescript": "^4.1.2",
 		"webpack": "^4.44.2",
 		"webpack-bundle-analyzer": "^4.1.0",
-		"webpack-cli": "3.x",
+		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.11.0",
 		"webpack-merge": "^5.4.0"
 	}
