--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
 		"dev-nodemon": "npx nodemon -r dotenv/config dist",
 		"dev-server": "npx tsc --project tsconfig.server.json --watch",
 		"dev-copy": "npx babel src/server -d dist -D --quiet -w",
-		"dev-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --config webpack.client.ts",
-		"dev-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack-dev-server --config webpack.upload.ts",
+		"dev-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack serve --config webpack.client.ts",
+		"dev-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack serve --config webpack.upload.ts",
 		"build-host": "clear && npm run build && clear && npm run host",
 		"host": "node -r dotenv/config dist",
 		"build": "npm run init && npm run build-server && npm run build-copy && npm run build-client && npm run build-upload",
@@ -57,19 +57,19 @@
 		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
-		"@apollo/client": "^3.2.9",
+		"@apollo/client": "^3.3.4",
 		"@date-io/date-fns": "^1.3.13",
-		"@material-ui/core": "^4.11.1",
-		"@material-ui/icons": "^4.9.1",
+		"@material-ui/core": "^4.11.2",
+		"@material-ui/icons": "^4.11.2",
 		"@material-ui/pickers": "^3.2.10",
 		"@oly_op/bem": "^2.10.0",
 		"@oly_op/music-app-common": "^6.4.5",
 		"@oly_op/pipe": "^3.1.0",
 		"@reduxjs/toolkit": "^1.5.0",
-		"algoliasearch": "^4.8.2",
+		"algoliasearch": "^4.8.3",
 		"apollo-server-express": "^2.19.0",
 		"apollo-upload-client": "^14.1.3",
-		"aws-sdk": "^2.799.0",
+		"aws-sdk": "^2.806.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
@@ -77,12 +77,12 @@
 		"downshift": "^6.0.6",
 		"express": "^4.17.1",
 		"graphql": "^15.4.0",
-		"graphql-scalars": "^1.5.0",
+		"graphql-scalars": "^1.6.1",
 		"graphql-upload": "^11.0.0",
 		"howler": "^2.2.1",
 		"lodash": "^4.17.20",
 		"morgan": "^1.10.0",
-		"music-metadata": "^7.5.0",
+		"music-metadata": "^7.5.1",
 		"music-metadata-browser": "^2.1.6",
 		"node-fetch": "^2.6.1",
 		"pg": "^8.5.1",
@@ -93,7 +93,7 @@
 		"react-router-dom": "^5.2.0",
 		"react-waypoint": "^9.0.3",
 		"sharp": "^0.26.3",
-		"uuid": "^8.3.0"
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.12.8",
@@ -102,21 +102,21 @@
 		"@types/apollo-upload-client": "^14.1.0",
 		"@types/body-parser": "^1.19.0",
 		"@types/compression": "^1.7.0",
-		"@types/compression-webpack-plugin": "^6.0.0",
+		"@types/compression-webpack-plugin": "^6.0.1",
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/cors": "^2.8.8",
 		"@types/dotenv-webpack": "^5.0.0",
-		"@types/eslint": "^7.2.5",
+		"@types/eslint": "^7.2.6",
 		"@types/express": "^4.17.9",
-		"@types/express-serve-static-core": "^4.17.14",
+		"@types/express-serve-static-core": "^4.17.15",
 		"@types/graphql-upload": "^8.0.4",
 		"@types/helmet": "^4.0.0",
 		"@types/howler": "^2.2.1",
 		"@types/lodash": "^4.14.165",
 		"@types/mini-css-extract-plugin": "^1.2.1",
 		"@types/morgan": "^1.9.2",
-		"@types/node": "^14.14.10",
+		"@types/node": "^14.14.11",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.7",
@@ -130,15 +130,15 @@
 		"@types/webpack-bundle-analyzer": "^3.9.0",
 		"@types/webpack-dev-server": "^3.11.1",
 		"@types/webpack-env": "^1.16.0",
-		"@typescript-eslint/eslint-plugin": "^4.8.2",
-		"@typescript-eslint/parser": "^4.8.2",
-		"compression-webpack-plugin": "^6.1.1",
+		"@typescript-eslint/eslint-plugin": "^4.9.1",
+		"@typescript-eslint/parser": "^4.9.1",
+		"compression-webpack-plugin": "^7.0.0",
 		"concurrently": "^5.3.0",
-		"cross-env": "^7.0.2",
+		"cross-env": "^7.0.3",
 		"css-loader": "^5.0.1",
 		"dotenv": "^8.2.0",
 		"dotenv-webpack": "^6.0.0",
-		"eslint": "^7.14.0",
+		"eslint": "^7.15.0",
 		"eslint-config-airbnb-typescript": "^12.0.0",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
@@ -149,24 +149,24 @@
 		"helmet": "^4.2.0",
 		"html-webpack-plugin": "^4.5.0",
 		"kill-port": "^1.6.1",
-		"mini-css-extract-plugin": "^1.3.1",
+		"mini-css-extract-plugin": "^1.3.2",
 		"nodemon": "^2.0.6",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
-		"sass": "^1.29.0",
+		"sass": "^1.30.0",
 		"sass-loader": "^10.1.0",
-		"source-map-loader": "^1.1.2",
+		"source-map-loader": "^1.1.3",
 		"style-loader": "^2.0.0",
 		"stylelint": "^13.8.0",
 		"stylelint-config-sass-guidelines": "^7.1.0",
 		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.1",
 		"ts-loader": "^8.0.11",
-		"ts-node": "^9.0.0",
+		"ts-node": "^9.1.1",
 		"typescript": "^4.1.2",
-		"webpack": "^4.44.2",
-		"webpack-bundle-analyzer": "^4.1.0",
-		"webpack-cli": "^3.3.12",
+		"webpack": "^5.10.0",
+		"webpack-bundle-analyzer": "^4.2.0",
+		"webpack-cli": "^4.2.0",
 		"webpack-dev-server": "^3.11.0",
-		"webpack-merge": "^5.4.0"
+		"webpack-merge": "^5.4.1"
 	}
 }
