--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
 		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
 	},
 	"dependencies": {
-		"@apollo/client": "^3.3.4",
+		"@apollo/client": "^3.3.5",
+		"@aws-sdk/client-s3": "^1.0.0-rc.8",
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.2",
 		"@material-ui/icons": "^4.11.2",
@@ -69,7 +70,6 @@
 		"algoliasearch": "^4.8.3",
 		"apollo-server-express": "^2.19.0",
 		"apollo-upload-client": "^14.1.3",
-		"aws-sdk": "^2.806.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
@@ -105,7 +105,7 @@
 		"@types/compression-webpack-plugin": "^6.0.1",
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
-		"@types/cors": "^2.8.8",
+		"@types/cors": "^2.8.9",
 		"@types/dotenv-webpack": "^5.0.0",
 		"@types/eslint": "^7.2.6",
 		"@types/express": "^4.17.9",
@@ -116,7 +116,7 @@
 		"@types/lodash": "^4.14.165",
 		"@types/mini-css-extract-plugin": "^1.2.1",
 		"@types/morgan": "^1.9.2",
-		"@types/node": "^14.14.11",
+		"@types/node": "^14.14.12",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.7",
@@ -149,7 +149,7 @@
 		"helmet": "^4.2.0",
 		"html-webpack-plugin": "^4.5.0",
 		"kill-port": "^1.6.1",
-		"mini-css-extract-plugin": "^1.3.2",
+		"mini-css-extract-plugin": "^1.3.3",
 		"nodemon": "^2.0.6",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
 		"sass": "^1.30.0",
@@ -167,6 +167,6 @@
 		"webpack-bundle-analyzer": "^4.2.0",
 		"webpack-cli": "^4.2.0",
 		"webpack-dev-server": "^3.11.0",
-		"webpack-merge": "^5.4.1"
+		"webpack-merge": "^5.5.0"
 	}
 }
