--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
 		"@types/lodash": "^4.14.165",
 		"@types/mini-css-extract-plugin": "^1.2.2",
 		"@types/morgan": "^1.9.2",
-		"@types/node": "^14.14.12",
+		"@types/node": "^14.14.13",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.7",
@@ -152,6 +152,7 @@
 		"mini-css-extract-plugin": "^1.3.3",
 		"nodemon": "^2.0.6",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
+		"postcss": "^8.2.1",
 		"sass": "^1.30.0",
 		"sass-loader": "^10.1.0",
 		"source-map-loader": "^1.1.3",
@@ -167,6 +168,6 @@
 		"webpack-bundle-analyzer": "^4.2.0",
 		"webpack-cli": "^4.2.0",
 		"webpack-dev-server": "^3.11.0",
-		"webpack-merge": "^5.6.1"
+		"webpack-merge": "^5.7.0"
 	}
 }
