--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.3.6",
-		"@aws-sdk/client-s3": "^1.0.0-rc.9",
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.2",
 		"@material-ui/icons": "^4.11.2",
@@ -82,8 +81,8 @@
 		"howler": "^2.2.1",
 		"lodash": "^4.17.20",
 		"morgan": "^1.10.0",
-		"music-metadata": "^7.5.1",
-		"music-metadata-browser": "^2.1.6",
+		"music-metadata": "^7.5.2",
+		"music-metadata-browser": "^2.1.7",
 		"node-fetch": "^2.6.1",
 		"pg": "^8.5.1",
 		"react": "^17.0.1",
@@ -96,6 +95,7 @@
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
+		"@aws-sdk/client-s3": "^1.0.0-beta.5",
 		"@babel/cli": "^7.12.10",
 		"@babel/core": "^7.12.10",
 		"@playlyfe/gql": "^2.6.2",
@@ -109,14 +109,14 @@
 		"@types/dotenv-webpack": "^5.0.0",
 		"@types/eslint": "^7.2.6",
 		"@types/express": "^4.17.9",
-		"@types/express-serve-static-core": "^4.17.15",
+		"@types/express-serve-static-core": "^4.17.17",
 		"@types/graphql-upload": "^8.0.4",
 		"@types/helmet": "^4.0.0",
 		"@types/howler": "^2.2.1",
 		"@types/lodash": "^4.14.165",
 		"@types/mini-css-extract-plugin": "^1.2.2",
 		"@types/morgan": "^1.9.2",
-		"@types/node": "^14.14.13",
+		"@types/node": "^14.14.14",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.7",
@@ -130,8 +130,8 @@
 		"@types/webpack-bundle-analyzer": "^3.9.0",
 		"@types/webpack-dev-server": "^3.11.1",
 		"@types/webpack-env": "^1.16.0",
-		"@typescript-eslint/eslint-plugin": "^4.9.1",
-		"@typescript-eslint/parser": "^4.9.1",
+		"@typescript-eslint/eslint-plugin": "^4.10.0",
+		"@typescript-eslint/parser": "^4.10.0",
 		"compression-webpack-plugin": "^7.0.0",
 		"concurrently": "^5.3.0",
 		"cross-env": "^7.0.3",
@@ -164,7 +164,7 @@
 		"ts-loader": "^8.0.12",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.1.3",
-		"webpack": "^5.10.1",
+		"webpack": "^5.10.3",
 		"webpack-bundle-analyzer": "^4.2.0",
 		"webpack-cli": "^4.2.0",
 		"webpack-dev-server": "^3.11.0",
