--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.3.6",
+		"@aws-sdk/client-s3": "^3.0.0",
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.2",
 		"@material-ui/icons": "^4.11.2",
@@ -95,7 +96,6 @@
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
-		"@aws-sdk/client-s3": "^1.0.0-beta.5",
 		"@babel/cli": "^7.12.10",
 		"@babel/core": "^7.12.10",
 		"@playlyfe/gql": "^2.6.2",
@@ -132,13 +132,13 @@
 		"@types/webpack-env": "^1.16.0",
 		"@typescript-eslint/eslint-plugin": "^4.10.0",
 		"@typescript-eslint/parser": "^4.10.0",
-		"compression-webpack-plugin": "^7.0.0",
+		"compression-webpack-plugin": "^7.1.0",
 		"concurrently": "^5.3.0",
 		"cross-env": "^7.0.3",
 		"css-loader": "^5.0.1",
 		"dotenv": "^8.2.0",
 		"dotenv-webpack": "^6.0.0",
-		"eslint": "^7.15.0",
+		"eslint": "^7.16.0",
 		"eslint-config-airbnb-typescript": "^12.0.0",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
@@ -152,7 +152,6 @@
 		"mini-css-extract-plugin": "^1.3.3",
 		"nodemon": "^2.0.6",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
-		"postcss": "^8.2.1",
 		"sass": "^1.30.0",
 		"sass-loader": "^10.1.0",
 		"source-map-loader": "^1.1.3",
