--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"algoliasearch": "^4.8.3",
 		"apollo-server-express": "^2.19.0",
 		"apollo-upload-client": "^14.1.3",
+		"bcrypt": "^5.0.0",
 		"body-parser": "^1.19.0",
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
@@ -80,6 +81,7 @@
 		"graphql-scalars": "^1.6.1",
 		"graphql-upload": "^11.0.0",
 		"howler": "^2.2.1",
+		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.20",
 		"morgan": "^1.10.0",
 		"music-metadata": "^7.5.2",
@@ -100,6 +102,7 @@
 		"@babel/core": "^7.12.10",
 		"@playlyfe/gql": "^2.6.2",
 		"@types/apollo-upload-client": "^14.1.0",
+		"@types/bcrypt": "^3.0.0",
 		"@types/body-parser": "^1.19.0",
 		"@types/compression": "^1.7.0",
 		"@types/compression-webpack-plugin": "^6.0.1",
@@ -113,6 +116,7 @@
 		"@types/graphql-upload": "^8.0.4",
 		"@types/helmet": "^4.0.0",
 		"@types/howler": "^2.2.1",
+		"@types/jsonwebtoken": "^8.5.0",
 		"@types/lodash": "^4.14.165",
 		"@types/mini-css-extract-plugin": "^1.2.2",
 		"@types/morgan": "^1.9.2",
