--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
 		"@oly_op/pipe": "^3.1.0",
 		"@reduxjs/toolkit": "^1.5.0",
 		"algoliasearch": "^4.8.3",
-		"apollo-server-express": "^2.19.0",
+		"apollo-server-express": "^2.19.1",
 		"apollo-upload-client": "^14.1.3",
 		"bcrypt": "^5.0.0",
 		"body-parser": "^1.19.0",
@@ -78,10 +78,11 @@
 		"downshift": "^6.0.7",
 		"express": "^4.17.1",
 		"graphql": "^15.4.0",
-		"graphql-scalars": "^1.6.1",
+		"graphql-scalars": "^1.7.0",
 		"graphql-upload": "^11.0.0",
 		"howler": "^2.2.1",
 		"jsonwebtoken": "^8.5.1",
+		"jwt-decode": "^3.1.2",
 		"lodash": "^4.17.20",
 		"morgan": "^1.10.0",
 		"music-metadata": "^7.5.2",
@@ -94,7 +95,7 @@
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-waypoint": "^9.0.3",
-		"sharp": "^0.26.3",
+		"sharp": "^0.27.0",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
@@ -105,7 +106,7 @@
 		"@types/bcrypt": "^3.0.0",
 		"@types/body-parser": "^1.19.0",
 		"@types/compression": "^1.7.0",
-		"@types/compression-webpack-plugin": "^6.0.1",
+		"@types/compression-webpack-plugin": "^6.0.2",
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/cors": "^2.8.9",
@@ -126,7 +127,7 @@
 		"@types/pg": "^7.14.7",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
-		"@types/react-redux": "^7.1.12",
+		"@types/react-redux": "^7.1.13",
 		"@types/react-router-dom": "^5.1.6",
 		"@types/sharp": "^0.26.1",
 		"@types/uuid": "^8.3.0",
@@ -134,8 +135,8 @@
 		"@types/webpack-bundle-analyzer": "^3.9.0",
 		"@types/webpack-dev-server": "^3.11.1",
 		"@types/webpack-env": "^1.16.0",
-		"@typescript-eslint/eslint-plugin": "^4.10.0",
-		"@typescript-eslint/parser": "^4.10.0",
+		"@typescript-eslint/eslint-plugin": "^4.11.0",
+		"@typescript-eslint/parser": "^4.11.0",
 		"compression-webpack-plugin": "^7.1.0",
 		"concurrently": "^5.3.0",
 		"cross-env": "^7.0.3",
@@ -171,6 +172,6 @@
 		"webpack-bundle-analyzer": "^4.3.0",
 		"webpack-cli": "^4.2.0",
 		"webpack-dev-server": "^3.11.0",
-		"webpack-merge": "^5.7.2"
+		"webpack-merge": "^5.7.3"
 	}
 }
