--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,7 @@ NODE_ENV="development"
 
 HOST="localhost"
 
-SERVER_PORT=3000
+SERVER_PORT=80
 DEV_SERVER_PORT=3000
 DEV_CLIENT_PORT=3001
 DEV_UPLOAD_PORT=3002
@@ -17,11 +17,9 @@ AWS_REGION="ap-southeast-2"
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 
-# APOLLO_SCHEMA_REPORTING=true
-# APOLLO_GRAPH_VARIANT="current"
-# APOLLO_KEY=""
-
 SERP_API_KEY=""
 
 ALGOLIA_APPLICATION_ID="C31MUS7L1H"
 ALGOLIA_API_KEY=""
+
+TOKEN_SECRET=""
