--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.3.6",
-		"@aws-sdk/client-s3": "^3.0.0",
+		"@aws-sdk/client-s3": "^3.1.0",
+		"@aws-sdk/types": "^3.1.0",
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.2",
 		"@material-ui/icons": "^4.11.2",
@@ -75,11 +76,12 @@
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
-		"downshift": "^6.0.7",
+		"downshift": "^6.0.10",
 		"express": "^4.17.1",
 		"graphql": "^15.4.0",
 		"graphql-scalars": "^1.7.0",
 		"graphql-upload": "^11.0.0",
+		"helmet": "^4.3.1",
 		"howler": "^2.2.1",
 		"jsonwebtoken": "^8.5.1",
 		"jwt-decode": "^3.1.2",
@@ -127,7 +129,7 @@
 		"@types/pg": "^7.14.7",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
-		"@types/react-redux": "^7.1.13",
+		"@types/react-redux": "^7.1.14",
 		"@types/react-router-dom": "^5.1.6",
 		"@types/sharp": "^0.26.1",
 		"@types/uuid": "^8.3.0",
@@ -137,7 +139,7 @@
 		"@types/webpack-env": "^1.16.0",
 		"@typescript-eslint/eslint-plugin": "^4.11.0",
 		"@typescript-eslint/parser": "^4.11.0",
-		"compression-webpack-plugin": "^7.1.0",
+		"compression-webpack-plugin": "^7.1.1",
 		"concurrently": "^5.3.0",
 		"cross-env": "^7.0.3",
 		"css-loader": "^5.0.1",
@@ -151,7 +153,6 @@
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-react": "^7.21.5",
 		"eslint-plugin-react-hooks": "^4.2.0",
-		"helmet": "^4.2.0",
 		"html-webpack-plugin": "^4.5.0",
 		"kill-port": "^1.6.1",
 		"mini-css-extract-plugin": "^1.3.3",
@@ -159,7 +160,7 @@
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
 		"sass": "^1.30.0",
 		"sass-loader": "^10.1.0",
-		"source-map-loader": "^1.1.3",
+		"source-map-loader": "^2.0.0",
 		"style-loader": "^2.0.0",
 		"stylelint": "^13.8.0",
 		"stylelint-config-sass-guidelines": "^7.1.0",
@@ -170,7 +171,7 @@
 		"typescript": "^4.1.3",
 		"webpack": "^5.11.0",
 		"webpack-bundle-analyzer": "^4.3.0",
-		"webpack-cli": "^4.2.0",
+		"webpack-cli": "^4.3.0",
 		"webpack-dev-server": "^3.11.0",
 		"webpack-merge": "^5.7.3"
 	}
