--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ src/common/types.js
 src/common/types.d.ts
 src/common/globals.js
 src/common/globals.d.ts
+src/common/metadata.js
+src/common/metadata.d.ts
 src/common/dataUrlToBlob.js
 src/common/dataUrlToBlob.d.ts
 src/common/bufferToDataUrl.js
