--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
 		"kill-port": "npx kill-port 3000 3001 3002",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master",
-		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest"
+		"publish-common": "npx tsc --outDir src/common --project tsconfig.common.json && cd src/common && npm publish && cd ../.. && npm i -S -P @oly_op/music-app-common@latest",
+		"docker": "docker build -t olyop/music-app .",
+		"containerize": "npm run build && npm run docker"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.3.6",
@@ -65,7 +67,7 @@
 		"@material-ui/icons": "^4.11.2",
 		"@material-ui/pickers": "^3.2.10",
 		"@oly_op/bem": "^2.10.0",
-		"@oly_op/music-app-common": "^6.4.5",
+		"@oly_op/music-app-common": "^6.6.0",
 		"@oly_op/pipe": "^3.1.0",
 		"@reduxjs/toolkit": "^1.5.0",
 		"algoliasearch": "^4.8.3",
@@ -76,7 +78,8 @@
 		"compression": "^1.7.4",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
-		"downshift": "^6.0.10",
+		"dotenv": "^8.2.0",
+		"downshift": "^6.0.11",
 		"express": "^4.17.1",
 		"graphql": "^15.4.0",
 		"graphql-scalars": "^1.7.0",
@@ -87,8 +90,8 @@
 		"jwt-decode": "^3.1.2",
 		"lodash": "^4.17.20",
 		"morgan": "^1.10.0",
-		"music-metadata": "^7.5.3",
-		"music-metadata-browser": "^2.1.7",
+		"music-metadata": "^7.6.2",
+		"music-metadata-browser": "^2.1.9",
 		"node-fetch": "^2.6.1",
 		"pg": "^8.5.1",
 		"react": "^17.0.1",
@@ -108,7 +111,7 @@
 		"@types/bcrypt": "^3.0.0",
 		"@types/body-parser": "^1.19.0",
 		"@types/compression": "^1.7.0",
-		"@types/compression-webpack-plugin": "^6.0.2",
+		"@types/compression-webpack-plugin": "^6.0.3",
 		"@types/concurrently": "^5.2.1",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/cors": "^2.8.9",
@@ -120,32 +123,31 @@
 		"@types/helmet": "^4.0.0",
 		"@types/howler": "^2.2.1",
 		"@types/jsonwebtoken": "^8.5.0",
-		"@types/lodash": "^4.14.166",
+		"@types/lodash": "^4.14.167",
 		"@types/mini-css-extract-plugin": "^1.2.2",
 		"@types/morgan": "^1.9.2",
-		"@types/node": "^14.14.17",
+		"@types/node": "^14.14.20",
 		"@types/node-sass": "^4.11.1",
 		"@types/optimize-css-assets-webpack-plugin": "^5.0.1",
 		"@types/pg": "^7.14.7",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
-		"@types/react-redux": "^7.1.14",
+		"@types/react-redux": "^7.1.15",
 		"@types/react-router-dom": "^5.1.7",
-		"@types/sharp": "^0.26.1",
+		"@types/sharp": "^0.27.1",
 		"@types/uuid": "^8.3.0",
 		"@types/webpack": "^4.41.25",
 		"@types/webpack-bundle-analyzer": "^3.9.0",
 		"@types/webpack-dev-server": "^3.11.1",
 		"@types/webpack-env": "^1.16.0",
-		"@typescript-eslint/eslint-plugin": "^4.11.1",
-		"@typescript-eslint/parser": "^4.11.1",
+		"@typescript-eslint/eslint-plugin": "^4.12.0",
+		"@typescript-eslint/parser": "^4.12.0",
 		"compression-webpack-plugin": "^7.1.1",
 		"concurrently": "^5.3.0",
 		"cross-env": "^7.0.3",
 		"css-loader": "^5.0.1",
-		"dotenv": "^8.2.0",
 		"dotenv-webpack": "^6.0.0",
-		"eslint": "^7.16.0",
+		"eslint": "^7.17.0",
 		"eslint-config-airbnb-typescript": "^12.0.0",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
@@ -153,12 +155,13 @@
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-react": "^7.22.0",
 		"eslint-plugin-react-hooks": "^4.2.0",
-		"html-webpack-plugin": "^4.5.0",
+		"handlebars": "^4.7.6",
+		"html-webpack-plugin": "^4.5.1",
 		"kill-port": "^1.6.1",
 		"mini-css-extract-plugin": "^1.3.3",
-		"nodemon": "^2.0.6",
+		"nodemon": "^2.0.7",
 		"optimize-css-assets-webpack-plugin": "^5.0.4",
-		"sass": "^1.32.0",
+		"sass": "^1.32.2",
 		"sass-loader": "^10.1.0",
 		"source-map-loader": "^2.0.0",
 		"style-loader": "^2.0.0",
@@ -166,7 +169,7 @@
 		"stylelint-config-sass-guidelines": "^7.1.0",
 		"stylelint-scss": "^3.18.0",
 		"stylelint-webpack-plugin": "^2.1.1",
-		"ts-loader": "^8.0.13",
+		"ts-loader": "^8.0.14",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.1.3",
 		"webpack": "^5.11.1",
