--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -9,6 +9,7 @@
 	"files": [
 		"src/common/src/types.ts",
 		"src/common/src/globals.ts",
+		"src/common/src/metadata.ts",
 		"src/common/src/dataUrlToBlob.ts",
 		"src/common/src/bufferToDataUrl.ts",
 		"src/common/src/deserializeDuration.ts"
