--- a/package.json
+++ b/package.json
@@ -32,24 +32,24 @@
 		"eslint"
 	],
 	"scripts": {
-		"dev": "npm run dev-init && npx concurrently \"npm:dev-copy\" \"npm:dev-server\" \"npm:dev-upload-server\" \"npm:dev-nodemon\" \"npm:dev-client\" \"npm:dev-upload\"",
-		"dev-init": "clear && npm run init && npm run build-server && npm run build-copy",
-		"dev-nodemon": "npx nodemon -r dotenv/config dist",
+		"dev": "npm run dev-init && npx concurrently \"npm:dev-copy-server\" \"npm:dev-copy-upload-server\" \"npm:dev-server\" \"npm:dev-upload-server\" \"npm:dev-nodemon-server\" \"npm:dev-nodemon-upload-server\" \"npm:dev-client\" \"npm:dev-upload\"",
+		"dev-init": "clear && npm run init && npm run build-server && npm run build-upload-server && npm run build-copy-server && npm run build-copy-upload-server",
+		"dev-nodemon-server": "npx nodemon -r dotenv/config dist-server",
+		"dev-nodemon-upload-server": "npx nodemon -r dotenv/config dist-upload-server",
 		"dev-server": "npx tsc --project tsconfig.server.json --watch",
 		"dev-upload-server": "npx tsc --project tsconfig.upload-server.json --watch",
-		"dev-copy": "npx babel src/server -d dist -D --quiet -w",
+		"dev-copy-server": "npx babel src/server -d dist-server -D --quiet -w",
+		"dev-copy-upload-server": "npx babel src/server -d dist-upload-server -D --quiet -w",
 		"dev-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack serve --config webpack.client.ts",
 		"dev-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack serve --config webpack.upload.ts",
-		"build-host": "clear && npm run build && clear && npm run host",
-		"host": "node -r dotenv/config dist",
-		"build": "npm run init && npm run build-server && npm run build-copy && npm run build-client && npm run build-upload",
-		"build-copy": "npx babel src/server -d dist -D --quiet",
+		"build": "npm run init && npm run build-server && npm run build-upload-server && npm run build-copy-server && npm run build-copy-upload-server && npm run build-client && npm run build-upload",
+		"build-copy-server": "npx babel src/server -d dist-server -D --quiet",
+		"build-copy-upload-server": "npx babel src/server -d dist-upload-server -D --quiet",
 		"build-server": "npx tsc --project tsconfig.server.json",
 		"build-upload-server": "npx tsc --project tsconfig.upload-server.json",
 		"build-client": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.client.ts",
 		"build-upload": "npx cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" npx webpack --config webpack.upload.ts",
-		"init": "clear && npm run kill-port && npm run delete-build",
-		"delete-build": "rm -r -f dist",
+		"init": "clear && npm run kill-port && rm -r -f dist-server && rm -r -f dist-upload-server",
 		"kill-port": "npx kill-port 3000 3001 3002",
 		"sync": "git checkout . && git remote update && git pull",
 		"push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master",
@@ -60,7 +60,6 @@
 	"dependencies": {
 		"@apollo/client": "^3.3.7",
 		"@aws-sdk/client-s3": "^3.3.0",
-		"@aws-sdk/types": "^3.1.0",
 		"@date-io/date-fns": "^1.3.13",
 		"@material-ui/core": "^4.11.2",
 		"@material-ui/icons": "^4.11.2",
