--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -7,7 +7,8 @@
 		"webpack.upload.ts"
 	],
 	"exclude": [
-		"dist",
-		"node_modules"
+		"dist-server",
+		"node_modules",
+		"dist-upload-server"
 	]
 }
